template.json
{
    "Description": "Triggered By Torque (Blueprint: spec1-in-spec2, Owner: ophir.h@quali.com) - A Java Spring website deployed on a TomCat server and MySQL database\n",
    "Resources": {
        "AppSubnet0": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.0.0.0/24",
                "MapPublicIpOnLaunch": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "app-subnet-0"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "AppSubnet0RouteAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "AppSubnet0"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "AppSubnet1": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.0.1.0/24",
                "MapPublicIpOnLaunch": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "app-subnet-1"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "AppSubnet1RouteAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "AppSubnet1"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "DNS": {
            "Properties": {
                "HostedZoneConfig": {
                    "Comment": "hosted zone for sandbox: 6kk0c3nl8502c2"
                },
                "Name": "6kk0c3nl8502c2.sandbox.com",
                "VPCs": [
                    {
                        "VPCId": {
                            "Ref": "VPC"
                        },
                        "VPCRegion": {
                            "Ref": "AWS::Region"
                        }
                    }
                ]
            },
            "Type": "AWS::Route53::HostedZone"
        },
        "DNSRecordjavaspringwebsite": {
            "Properties": {
                "Comment": "DNS name for instance: java-spring-website.",
                "HostedZoneId": {
                    "Ref": "DNS"
                },
                "Name": "java-spring-website.6kk0c3nl8502c2.sandbox.com",
                "ResourceRecords": [
                    {
                        "Fn::GetAtt": [
                            "javaspringwebsiteNic",
                            "PrimaryPrivateIpAddress"
                        ]
                    }
                ],
                "TTL": 20,
                "Type": "A"
            },
            "Type": "AWS::Route53::RecordSet"
        },
        "DNSRecordtorqueSidecar": {
            "Properties": {
                "Comment": "DNS name for instance: torqueSidecar.",
                "HostedZoneId": {
                    "Ref": "DNS"
                },
                "Name": "torqueSidecar.6kk0c3nl8502c2.sandbox.com",
                "ResourceRecords": [
                    {
                        "Fn::GetAtt": [
                            "torqueSidecarNic",
                            "PrimaryPrivateIpAddress"
                        ]
                    }
                ],
                "TTL": 20,
                "Type": "A"
            },
            "Type": "AWS::Route53::RecordSet"
        },
        "DefaultSandboxSG": {
            "Properties": {
                "GroupDescription": "Simply attaching the empty security group(DefaultSandboxSG) to an instance gives that instance permission to connect other instances",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "sandbox default security group"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "EmptyTG": {
            "Properties": {
                "Name": "TG6kk0c3nl8502c2Empty",
                "Port": 1,
                "Protocol": "HTTP",
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::ElasticLoadBalancingV2::TargetGroup"
        },
        "InternetGateway": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "internet-gateway"
                    }
                ]
            },
            "Type": "AWS::EC2::InternetGateway"
        },
        "Listener8080": {
            "Properties": {
                "Certificates": [],
                "DefaultActions": [
                    {
                        "TargetGroupArn": {
                            "Ref": "TG6kk0c3nl8502c2H0aa79ec014"
                        },
                        "Type": "forward"
                    }
                ],
                "LoadBalancerArn": {
                    "Ref": "MainALB"
                },
                "Port": 8080,
                "Protocol": "HTTP"
            },
            "Type": "AWS::ElasticLoadBalancingV2::Listener"
        },
        "MainALB": {
            "DependsOn": "VpcInternetGatewayAttachment",
            "Properties": {
                "Scheme": "internet-facing",
                "SecurityGroups": [
                    {
                        "Ref": "MainALBSG"
                    }
                ],
                "Subnets": [
                    {
                        "Ref": "AppSubnet0"
                    },
                    {
                        "Ref": "AppSubnet1"
                    }
                ]
            },
            "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer"
        },
        "MainALBSG": {
            "Properties": {
                "GroupDescription": "Attaching an empty security group to the ALB to give instances an access",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "Description": "public port access",
                        "FromPort": 8080,
                        "IpProtocol": "tcp",
                        "ToPort": 8080
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "MainALBSG"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "MngSubnet": {
            "Properties": {
                "CidrBlock": "10.0.3.0/24",
                "MapPublicIpOnLaunch": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "mng-subnet"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "MngSubnetRouteAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "MngSubnet"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "PublicRouteTable": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "public-route-table"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "RouteToInternet": {
            "DependsOn": "VpcInternetGatewayAttachment",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "TG6kk0c3nl8502c2H0aa79ec014": {
            "Properties": {
                "Name": "TG6kk0c3nl8502c2H0aa79ec014",
                "Port": 8080,
                "Protocol": "HTTP",
                "Tags": [
                    {
                        "Key": "torque-sandbox-id",
                        "Value": "6kk0c3nl8502c2"
                    }
                ],
                "TargetGroupAttributes": [
                    {
                        "Key": "deregistration_delay.timeout_seconds",
                        "Value": "60"
                    }
                ],
                "Targets": [
                    {
                        "Id": {
                            "Ref": "javaspringwebsite"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::ElasticLoadBalancingV2::TargetGroup"
        },
        "VPC": {
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsHostnames": "true",
                "EnableDnsSupport": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "vpc"
                    }
                ]
            },
            "Type": "AWS::EC2::VPC"
        },
        "VpcInternetGatewayAttachment": {
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                },
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::VPCGatewayAttachment"
        },
        "javaspringwebsite": {
            "DependsOn": [
                "DNSRecordjavaspringwebsite",
                "DNSRecordtorqueSidecar"
            ],
            "Properties": {
                "ImageId": "ami-f90a4880",
                "InstanceType": "t2.nano",
                "KeyName": "keypair-6kk0c3nl8502c2",
                "NetworkInterfaces": [
                    {
                        "DeviceIndex": 0,
                        "NetworkInterfaceId": {
                            "Ref": "javaspringwebsiteNic"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "java-spring-website"
                    },
                    {
                        "Key": "torque-app-name",
                        "Value": "java-spring-website"
                    },
                    {
                        "Key": "torque-external-elb-dsn",
                        "Value": {
                            "Fn::GetAtt": [
                                "MainALB",
                                "DNSName"
                            ]
                        }
                    },
                    {
                        "Key": "torque-external-ports",
                        "Value": "java-spring-website:8080"
                    },
                    {
                        "Key": "torque-instance-logical-id",
                        "Value": "c7c6310bc8904eb2be76b091dc562f58"
                    },
                    {
                        "Key": "torque-internal-ports",
                        "Value": "java-spring-website:8080"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/sh\n",
                                "echo \"[cs18][$(date +\"%T.%3N\")] start of java-spring-website user-data\";\n",
                                "\nwhich wget > /dev/null;\nif [ $? -ne 0 ]; then\n    echo \"===== wget is not installed =====\";\nfi;\nwhich apt > /dev/null;\nif [ $? -ne 0 ]; then\n    echo \"===== apt is not installed =====\";\nfi;\nwhich yum > /dev/null;\nif [ $? -ne 0 ]; then\n    echo \"===== yum is not installed =====\";\nfi;\n\n",
                                "\n",
                                "if [ -f \"/etc/alpine-release\" ]; then \n",
                                " apk add coreutils;which wget > /dev/null; if [ $? -eq 0 ]; then ((wget --help | grep -q -e \"--recursive\") > /dev/null 2>&1 ||  apk add -q -f wget) ;else  apk add -q -f wget ;fi;\n",
                                "elif [ -f \"/etc/redhat-release\" ]; then \n",
                                "which wget > /dev/null || (yum install wget -y);\n",
                                "elif [ -f \"/etc/system-release\" ]; then \n",
                                "which wget > /dev/null || (yum install wget -y);\n",
                                "elif [ -f \"/etc/os-release\" ]; then \n",
                                "which wget > /dev/null || (apt-get update && apt-get -y install wget); sleep 5; which wget > /dev/null || (apt-get update && apt-get -y install wget);\n",
                                "elif [ -f \"/etc/lsb-release\" ]; then \n",
                                "which wget > /dev/null || (apt-get update && apt-get -y install wget); sleep 5; which wget > /dev/null || (apt-get update && apt-get -y install wget);\n",
                                "elif [ -f \"/etc/yum\" ]; then \n",
                                "which wget > /dev/null || (yum install wget -y);\n",
                                "fi;\n",
                                "\n",
                                "\n wget https://torque-production-public.s3-eu-central-1.amazonaws.com/helper/helper_v001.sh -T 5 -t 2 -O /usr/local/bin/torque.sh;\nchmod +x /usr/local/bin/torque.sh;\ntype torque.sh> /dev/null 2>&1 || echo \"torque.sh not found in PATH\";\necho \"export COLONY_SIDECAR_API=\"http://torqueSidecar.6kk0c3nl8502c2.sandbox.com:4000/\"\" >> /etc/environment;\n            \n",
                                "echo \"[cs18][$(date +\"%T.%3N\")] going to check if sidecar api is ready\";\n",
                                "echo \"[$(date +\"%T.%3N\")] waiting for sidecar dns resolution\"; until DNS_RESOLUTION_RESULT=$(getent hosts torqueSidecar.6kk0c3nl8502c2.sandbox.com) ; do echo \"[$(date +\"%T.%3N\")] sidecar dns not resolved, waiting ...\"; sleep 10; done;echo \"[$(date +\"%T.%3N\")] sidecar dns resolved!\"; echo \"$DNS_RESOLUTION_RESULT\" >> /etc/hosts;echo \"[$(date +\"%T.%3N\")] waiting for sidecar api\"; while [ 0 ]; do config_start_status=$(wget --tries=1 -T 10 -nv -O- to [...]
                                "echo \"[cs18][$(date +\"%T.%3N\")] going to check if sidecar ftp is ready\";\n",
                                "echo \"fetching from sidecar text.txt..\"\nwhile true;do \nwget -T 15 -nH ftp://torqueSidecar.6kk0c3nl8502c2.sandbox.com/text.txt -O /root/text.txt && break;\nsleep 1;\ndone;\n",
                                "echo \"fetching from sidecar 6kk0c3nl8502c2_1e11785db559483c84e350905643d28a.userdata..\"\nwhile true;do \nwget -T 15 -nH ftp://torqueSidecar.6kk0c3nl8502c2.sandbox.com/6kk0c3nl8502c2_1e11785db559483c84e350905643d28a.userdata -O /root/6kk0c3nl8502c2_1e11785db559483c84e350905643d28a.userdata && break;\nsleep 1;\ndone;\n",
                                "chmod +x /root/6kk0c3nl8502c2_1e11785db559483c84e350905643d28a.userdata\n",
                                "/root/6kk0c3nl8502c2_1e11785db559483c84e350905643d28a.userdata\n",
                                "echo \"[cs18][$(date +\"%T.%3N\")] end of java-spring-website user-data\";\n"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::EC2::Instance"
        },
        "javaspringwebsiteNic": {
            "Properties": {
                "GroupSet": [
                    {
                        "Ref": "javaspringwebsiteSG"
                    },
                    {
                        "Ref": "DefaultSandboxSG"
                    }
                ],
                "SubnetId": {
                    "Ref": "AppSubnet0"
                }
            },
            "Type": "AWS::EC2::NetworkInterface"
        },
        "javaspringwebsiteSG": {
            "Properties": {
                "GroupDescription": "java-spring-website Security Group",
                "SecurityGroupEgress": [],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "SourceSecurityGroupId": {
                            "Ref": "torqueSidecarSG"
                        }
                    },
                    {
                        "FromPort": 22,
                        "IpProtocol": "tcp",
                        "SourceSecurityGroupId": {
                            "Ref": "torqueDebugServiceSG"
                        },
                        "ToPort": 22
                    },
                    {
                        "FromPort": 3389,
                        "IpProtocol": "tcp",
                        "SourceSecurityGroupId": {
                            "Ref": "torqueDebugServiceSG"
                        },
                        "ToPort": 3389
                    },
                    {
                        "FromPort": 8080,
                        "IpProtocol": "tcp",
                        "SourceSecurityGroupId": {
                            "Ref": "MainALBSG"
                        },
                        "ToPort": 8080
                    },
                    {
                        "FromPort": 8080,
                        "IpProtocol": "tcp",
                        "SourceSecurityGroupId": {
                            "Ref": "DefaultSandboxSG"
                        },
                        "ToPort": 8080
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "sidecarInstanceProfile": {
            "Properties": {
                "InstanceProfileName": "torque-sandbox-sidecar-role-6kk0c3nl8502c2",
                "Path": "/torque/1ba6c10d-fac8-48d5-97c3-8b14a20a50ba/sandbox/6kk0c3nl8502c2/",
                "Roles": [
                    {
                        "Ref": "sidecarRole"
                    }
                ]
            },
            "Type": "AWS::IAM::InstanceProfile"
        },
        "sidecarRole": {
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Action": "sts:AssumeRole",
                            "Effect": "Allow",
                            "Principal": {
                                "Service": "ec2.amazonaws.com"
                            }
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/AmazonEC2ReadOnlyAccess",
                    "arn:aws:iam::aws:policy/AWSCloudFormationReadOnlyAccess",
                    "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
                ],
                "Path": "/torque/1ba6c10d-fac8-48d5-97c3-8b14a20a50ba/sandbox/6kk0c3nl8502c2/",
                "Policies": [
                    {
                        "PolicyDocument": {
                            "Statement": [
                                {
                                    "Action": [
                                        "dynamodb:GetItem",
                                        "dynamodb:Query",
                                        "dynamodb:UpdateItem"
                                    ],
                                    "Condition": {
                                        "ForAllValues:StringEquals": {
                                            "dynamodb:LeadingKeys": "6kk0c3nl8502c2"
                                        }
                                    },
                                    "Effect": "Allow",
                                    "Resource": [
                                        "arn:aws:dynamodb:*:*:table/torque-sandboxes-datatable-1ba6c10d-fac8-48d5-97c3-8b14a20a50ba",
                                        "arn:aws:dynamodb:*:*:table/torque-sandboxes-datatable"
                                    ]
                                }
                            ],
                            "Version": "2012-10-17"
                        },
                        "PolicyName": "TorqueSandboxDynamoDBAccess"
                    },
                    {
                        "PolicyDocument": {
                            "Statement": [
                                {
                                    "Action": [
                                        "s3:Get*",
                                        "s3:List*",
                                        "s3:Put*"
                                    ],
                                    "Effect": "Allow",
                                    "Resource": [
                                        "arn:aws:s3:::torque-1ba6c10d-fac8-48d5-97c3-8b14a20a50ba",
                                        "arn:aws:s3:::torque-1ba6c10d-fac8-48d5-97c3-8b14a20a50ba/*"
                                    ]
                                }
                            ],
                            "Version": "2012-10-17"
                        },
                        "PolicyName": "TorqueSandboxS3Access"
                    }
                ],
                "RoleName": "torque-sandbox-sidecar-role-6kk0c3nl8502c2"
            },
            "Type": "AWS::IAM::Role"
        },
        "torqueDebugService": {
            "Properties": {
                "IamInstanceProfile": "torque-instance-profile-1ba6c10d-fac8-48d5-97c3-8b14a20a50ba",
                "ImageId": "ami-047b1aebadba72929",
                "InstanceType": "t3.medium",
                "KeyName": "keypair-6kk0c3nl8502c2",
                "SecurityGroupIds": [
                    {
                        "Ref": "torqueDebugServiceSG"
                    }
                ],
                "SubnetId": {
                    "Ref": "MngSubnet"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "torqueDebugService"
                    },
                    {
                        "Key": "torque-app-name",
                        "Value": "torqueDebugService"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash\n",
                                "echo \"[cs18][$(date +\"%T.%3N\")] start of qualiY user-data\";\n",
                                "wget https://colony-qualiy-artifacts.s3.eu-west-2.amazonaws.com/versions/1_1_0/qualiy_userdata.sh\n",
                                "chmod +x qualiy_userdata.sh\n",
                                "sudo SIDECAR_API_URL=http://torqueSidecar.6kk0c3nl8502c2.sandbox.com:4000 QUALIY_STATUS_UPDATER_URL=https://colony-qualiy-artifacts.s3.eu-west-2.amazonaws.com/versions/1_1_0/qualiy_status_updater.sh ./qualiy_userdata.sh aws_key_name=sandbox-6kk0c3nl8502c2/keypair-6kk0c3nl8502c2.pem aws_bucket_name=torque-1ba6c10d-fac8-48d5-97c3-8b14a20a50ba aws_region=eu-west-1 turn-off\n",
                                "echo \"[cs18][$(date +\"%T.%3N\")] disabling the apt auto-upgrades service\";\n",
                                "sed -i 's/Lists \"1\"/Lists \"0\"/' /etc/apt/apt.conf.d/20auto-upgrades\n",
                                "echo \"[cs18][$(date +\"%T.%3N\")] end of qualiY user-data.\";\n"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::EC2::Instance"
        },
        "torqueDebugServiceSG": {
            "Properties": {
                "GroupDescription": "torqueDebugService Security Group",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "Description": "public port access",
                        "FromPort": 8080,
                        "IpProtocol": "tcp",
                        "ToPort": 8080
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "torqueSidecar": {
            "Properties": {
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/sda1",
                        "Ebs": {
                            "DeleteOnTermination": "true",
                            "Encrypted": "false",
                            "VolumeSize": 18
                        }
                    }
                ],
                "IamInstanceProfile": {
                    "Ref": "sidecarInstanceProfile"
                },
                "ImageId": "ami-06453e321410d9a3d",
                "InstanceType": "t3.medium",
                "KeyName": "keypair-6kk0c3nl8502c2",
                "NetworkInterfaces": [
                    {
                        "DeviceIndex": 0,
                        "NetworkInterfaceId": {
                            "Ref": "torqueSidecarNic"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "torqueSidecar"
                    },
                    {
                        "Key": "torque-app-name",
                        "Value": "torqueSidecar"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash\n",
                                "echo \"[cs18][$(date +\"%T.%3N\")] start of sidecar user-data.\";\n",
                                "region_name=",
                                {
                                    "Ref": "AWS::Region"
                                },
                                "\n",
                                "colony_environment=qtorque\n",
                                "colony_application=sidecar\n",
                                "colony_sandbox_id=6kk0c3nl8502c2\n",
                                "logz_token=xmJURUHwcxUGtgPpHHnhbTFqfLDBzUPi\n",
                                "##!/bin/bash\n",
                                "#colony_environment=env_name\n",
                                "#colony_sandbox_id=sandbox_id\n",
                                "#colony_application=application_name\n",
                                "#logz_token=TOKEN\n",
                                "#logz_event_type=event_type\n",
                                "\n",
                                "error_report() {\n",
                                "echo \"$1\"\n",
                                "send_log \"$1\" ERROR\n",
                                "}\n",
                                "\n",
                                "info_report() {\n",
                                "send_log \"$1\" INFO\n",
                                "}\n",
                                "\n",
                                "generate_post_data(){\n",
                                "message=\"$1\"\n",
                                "log_level=\"$2\"\n",
                                "message=\"${message//\\\"/\\\\\\\"}\"\n",
                                "cat <<EOF\n",
                                "{\n",
                                "  \"colony.environment\": \"$colony_environment\",\n",
                                "  \"colony.sandbox_id\": \"$colony_sandbox_id\",\n",
                                "  \"colony.application\": \"$colony_application\",\n",
                                "  \"colony.level\": \"$log_level\",\n",
                                "  \"message\": \"$message\"\n",
                                "}\n",
                                "EOF\n",
                                "}\n",
                                "\n",
                                "\n",
                                "send_log() {\n",
                                "data=$(generate_post_data \"$1\" \"$2\")\n",
                                "data=$(echo \"$data\" | tr \"\\n\\r\" \" \")\n",
                                "curl -d \"$data\" -H \"Content-type:application/json\" --data-urlencode -XPOST https://http-bulk-listener.logz.io:443/?token=$logz_token\n",
                                "}\n",
                                "\n",
                                "log_command(){\n",
                                "err=$($1 2>&1)\n",
                                "if [[ $? -ne 0 ]]; then\n",
                                "  error_report \"$err\"\n",
                                "fi\n",
                                "}\n",
                                "sandbox_vpc=",
                                {
                                    "Ref": "VPC"
                                },
                                "\n",
                                "bash -c \"cat > ~/sidecar.sh\" <<\"EOL\"\n",
                                "#!/bin/bash\n~/restart_filebeat.sh\naws s3 cp s3://torque-1ba6c10d-fac8-48d5-97c3-8b14a20a50ba/sandbox-6kk0c3nl8502c2/6kk0c3nl8502c2.userdata ~/sidecar_userdata.sh\nchmod +x ~/sidecar_userdata.sh\nregion_name=$region_name ~/sidecar_userdata.sh\n\n",
                                "EOL\n",
                                "chmod +x ~/sidecar.sh\n",
                                "docker login -u qualitorque -p a25e930b-47be-41c3-8104-988f85e97a0e\n",
                                "retry_count=10\n",
                                "for i in $(seq 1 $retry_count); do\n",
                                "docker_run_output=$(docker run --name sidecar -d --net=host -p 21:21 -p 4000:4000 -v \"/root/sidecar.sh:/sidecar.sh\" -e region_name=$region_name -e virtual_network_id=$sandbox_vpc -e COLONY_SANDBOX_ID=6kk0c3nl8502c2 -e COLONY_PRODUCTION_ID= -e COLONY_ENVIRONMENT=qtorque -e LOGZIO_TOKEN=xmJURUHwcxUGtgPpHHnhbTFqfLDBzUPi -e BRANDING=torque quali/sidecar:0.0.3.928 bash -c \"/sidecar.sh 2>&1 | tee /var/log/sidecar-userdata-output.log\" 2>&1)\n",
                                "if [[ $? -ne 0 ]]; then error_report \"Failed to launch sidecar container. try $i/$retry_count\ndocker run output: $docker_run_output\napt list | grep docker: $(apt list | grep docker 2>&1)\nenv: $(env)\nls -l /usr/local/bin/docker: $(ls -l /usr/local/bin/docker 2>&1)\";else break;fi\n",
                                "sleep 2; done;\n",
                                "echo \"[cs18][$(date +\"%T.%3N\")] end of sidecar user-data.\";\n"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::EC2::Instance"
        },
        "torqueSidecarNic": {
            "Properties": {
                "GroupSet": [
                    {
                        "Ref": "torqueSidecarSG"
                    },
                    {
                        "Ref": "DefaultSandboxSG"
                    }
                ],
                "SubnetId": {
                    "Ref": "MngSubnet"
                }
            },
            "Type": "AWS::EC2::NetworkInterface"
        },
        "torqueSidecarSG": {
            "Properties": {
                "GroupDescription": "torqueSidecar Security Group",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "SourceSecurityGroupId": {
                            "Ref": "DefaultSandboxSG"
                        }
                    },
                    {
                        "FromPort": 22,
                        "IpProtocol": "tcp",
                        "SourceSecurityGroupId": {
                            "Ref": "torqueDebugServiceSG"
                        },
                        "ToPort": 22
                    },
                    {
                        "FromPort": 4000,
                        "IpProtocol": "tcp",
                        "SourceSecurityGroupId": {
                            "Ref": "torqueDebugServiceSG"
                        },
                        "ToPort": 4000
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        }
    }
}
